# qt_dashboard

./: .gitignore  CMakeLists.txt  DonutChart.qml  EC2DiskStorage.qml  Main.qml  OverviewCard.qml  PieChart.qml  README.md  ScatterPlot.qml  TimelineChart.qml  TopServersList.qml  build.sh  main.cpp
